@@ -1,3 +1,8 @@
+Changelog v5.2.2 (2025-04-16):
+- Fixed Bugs with last played source
+- Fixed Bugs with UnCached Sources
+- Modified Setup Wizard
+
 Changelog v5.2.1 (2025-04-15):
 - Small String bug
 
